--- a/package.json
+++ b/package.json
@@ -111,9 +111,10 @@
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.2",
     "@types/ioredis": "^4.26.4",
-    "@types/jest": "^26.0.19",
+    "@types/jest": "^27.4.0",
     "@types/js-yaml": "^4.0.2",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/lodash.difference": "^4.5.6",
     "@types/lodash.find": "^4.6.6",
     "@types/lodash.groupby": "^4.6.6",
     "@types/lodash.last": "^3.0.6",
@@ -141,8 +142,8 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "http-terminator": "^3.0.3",
-    "jest": "^27.0.6",
-    "jest-junit": "^12.2.0",
+    "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
     "migrate-mongo": "=8.2.2",
     "newman": "^5.2.4",
     "nodemon": "^2.0.15",
@@ -150,7 +151,7 @@
     "prettier": "^2.5.1",
     "spectaql": "^0.11.0",
     "tree-kill": "^1.2.2",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.9.0",
